--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </tr>
             <tr>
                 <td>1960</td>
-                <td>CEO of Wayne Enterprises</td>
+                <td>CEO of Wayne Enterprise</td>
             </tr>
 
         </tbody>
@@ -81,7 +81,7 @@
            <td>
             <table>
                 <tr>
-                    <td>Detactive</td>
+                    <td>Detective</td>
                     <td>⭐⭐⭐⭐⭐</td>
                 </tr>
                 <tr>
