--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <td> <img src="./Batman_Vol_3_86_Textless-modified.png" width="150px" height="150px" alt="batman profile img"></td>
             <td>
                 <h1>Bruce Wayne</h1> 
-                <p><em>Owner of <strong><a href="https://en.wikipedia.org/wiki/Wayne_Enterprises">Wayen Enterprise</a></strong></em></p>
+                <p><em>Owner of <strong><a href="https://en.wikipedia.org/wiki/Wayne_Enterprises">Wayne Enterprise</a></strong></em></p>
                 <p>I am the dark knight and the caped crusader who fight crime around Gothem.</p>
             </td>
         </tr>
